<resources>
    <string name="app_name">Zoologico</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="texto_descritivo_cadastro">Adicione aqui o nome do animal que você quer adicionar no app e sua descrição. Use a criatividade!</string>
    <string name="hint_animal">Animal</string>
    <string name="hint_descricao">Descrição</string>
    <string name="texto_botao_adicionar">Adicionar</string>
    <string name="texto_botao_voltar">Voltar</string>
    <string name="texto_descricao_animal">Este é o animal mais lindo e veloz do mundo, pode confiar. Todos no universo amam este ser vivo magnifico</string>
    <string name="descricao_imagem_animal">Desenho de coração azul claro com patinha de animal branca com almofadinhas rosa na frente</string>
    <string name="texto_nome_do_animal">Nome do Animal</string>
</resources>