<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/tv_descritivo"
        android:layout_width="@dimen/largura_0"
        android:layout_height="wrap_content"
        android:text="@string/texto_descritivo_cadastro"
        android:textSize="@dimen/tamanho_fonte_12"
        android:textColor="@color/black"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/ed_animal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_animal"
        android:textColorHint="@color/black"
        android:layout_margin="@dimen/margem_16"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/tv_descritivo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"/>

    <EditText
        android:id="@+id/ed_descricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_descricao"
        android:textColorHint="@color/black"
        android:layout_margin="@dimen/margem_16"
        android:importantForAutofill="no"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/ed_animal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintStart_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_adicionar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/laranja"
        android:text="@string/texto_botao_adicionar"
        android:textAllCaps="true"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintTop_toBottomOf="@id/ed_descricao"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler"
        android:layout_width="match_parent"
        android:layout_height="@dimen/altura_0"
        app:layout_constraintTop_toBottomOf="@id/btn_adicionar"
        android:layout_margin="@dimen/margem_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>





</androidx.constraintlayout.widget.ConstraintLayout>